collects/tests/typed-racket/fail/pr13562.rkt
#;
(exn-pred #rx"struct:: expected the literal")

#lang typed/racket

;; Check that #:methods is ruled out
(struct: foo ([a : Integer]) #:methods gen:dict [])

